# py-de-id

./: .gitignore  Containerfile  pyproject.toml  readme.md  requirements.txt  startup
assets/: config.yaml
py_de_id/: __init__.py  app.py  py-de-id.py  pydeid.py
tests/: test_app.py  test_py_de_id.py
