[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-de-id"
version = "0.1.0"
description = "A simple Flask application."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.2",
    "requests",
    "pyyaml",
    "networkx"
]

[tool.setuptools]
packages = ["py_de_id"]
