[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-de-id"
version = "0.1.0"
description = "A cherrypy-based fhir R4 deidentifier."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cherrypy",
    "requests",
    "pyyaml",
]

[tool.setuptools]
packages = ["py_de_id"]
